--- a/blog.html
+++ b/blog.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>KDang's Blog</title>
+  <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-grey.css">
 </head>
 <body>
-  <head>
+  <header>
   <h1>My Blog</h1>
-  <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-grey.css">
-  </head>
+  </header>
   <section>
     <header><h2>I built a webpage<h3>Aug 31, 2015</h3><h4>Kenny</h4></h2>
     <article>
